feat/ add-item-requests-and-gateway#50